Modifications in Docker and Target file

--- a/calculator/Dockerfile
+++ b/calculator/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:17-alpine
 EXPOSE 8081
-ADD demo-jenkins.jar demo-jenkins.jar 
+ADD target/demo-jenkins.jar demo-jenkins.jar 
 ENTRYPOINT ["java", "-jar", "demo-jenkins.jar"]
